Set up environment variables and database for deployment

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-SECRET_KEY=your-secret-key
-DEBUG=True
+SECRET_KEY=django-insecure-f-qdq$(x!_*5#)acp%-s^!h(!30m%-^+n4cprv7%*_3c0=%i%z
+DEBUG=False
+DATABASE_URL=postgresql://tanvvie:1QYbo7rVvDErZgIwmxedqoi4xURmqt6z@dpg-d1445i63jp1c73d8j7v0-a/venocare_db
+DJANGO_SETTINGS_MODULE=venocare.settings
+PYTHON_VERSION=3.11
